snapshot-test - 792a514 fix(ng-dev/release): wait for next branch update action PR to be merged

--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -5,7 +5,9 @@ filegroup(
         "expand_template.bzl",
         "extract_js_module_output.bzl",
         "extract_types.bzl",
+        "filter_outputs.bzl",
         "@npm//@angular/dev-infra-private/bazel/api-golden:files",
+        "@npm//@angular/dev-infra-private/bazel/app-bundling:files",
         "@npm//@angular/dev-infra-private/bazel/benchmark:files",
         "@npm//@angular/dev-infra-private/bazel/browsers:files",
         "@npm//@angular/dev-infra-private/bazel/constraints:files",
@@ -13,6 +15,8 @@ filegroup(
         "@npm//@angular/dev-infra-private/bazel/http-server:files",
         "@npm//@angular/dev-infra-private/bazel/integration:files",
         "@npm//@angular/dev-infra-private/bazel/karma:files",
+        "@npm//@angular/dev-infra-private/bazel/map-size-tracking:files",
+        "@npm//@angular/dev-infra-private/bazel/private:files",
         "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
         "@npm//@angular/dev-infra-private/bazel/spec-bundling:files",
     ],
