--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-a84eef14d3990a24765684f12b89470ae1b9a3eb",
+  "version": "0.0.0-792a5146d1c30551e72a463f34ff0ef948d77b7a",
   "bin": {
     "ng-dev": "./ng-dev/bundles/cli.mjs"
   },
@@ -26,17 +26,17 @@
   },
   "packageManager": "yarn@3.2.1",
   "dependencies": {
-    "@angular-devkit/build-angular": "14.1.0-next.0",
+    "@angular-devkit/build-angular": "14.1.0-next.4",
     "@angular/benchpress": "0.3.0",
     "@babel/core": "^7.16.0",
     "@bazel/buildifier": "5.1.0",
-    "@bazel/concatjs": "5.5.0",
-    "@bazel/esbuild": "5.5.0",
-    "@bazel/protractor": "5.5.0",
-    "@bazel/runfiles": "5.5.0",
-    "@bazel/terser": "5.5.0",
-    "@bazel/typescript": "5.5.0",
-    "@microsoft/api-extractor": "7.25.0",
+    "@bazel/concatjs": "5.5.2",
+    "@bazel/esbuild": "5.5.2",
+    "@bazel/protractor": "5.5.2",
+    "@bazel/runfiles": "5.5.2",
+    "@bazel/terser": "5.5.2",
+    "@bazel/typescript": "5.5.2",
+    "@microsoft/api-extractor": "7.28.4",
     "@types/browser-sync": "^2.26.3",
     "@types/node": "16.10.9",
     "@types/selenium-webdriver": "^4.0.18",
@@ -47,10 +47,11 @@
     "@yarnpkg/lockfile": "^1.1.0",
     "browser-sync": "^2.27.7",
     "clang-format": "1.8.0",
-    "prettier": "2.6.2",
+    "prettier": "2.7.1",
     "protractor": "^7.0.0",
-    "selenium-webdriver": "4.2.0",
+    "selenium-webdriver": "4.3.1",
     "send": "^0.18.0",
+    "source-map": "^0.7.4",
     "tmp": "^0.2.1",
     "true-case-path": "^2.2.1",
     "tslib": "^2.3.0",
@@ -61,34 +62,34 @@
   "devDependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
-    "@angular/animations": "14.1.0-next.0",
-    "@angular/bazel": "14.1.0-next.0",
-    "@angular/cdk": "14.1.0-next.0",
-    "@angular/cli": "14.1.0-next.0",
-    "@angular/common": "14.1.0-next.0",
-    "@angular/compiler": "14.1.0-next.0",
-    "@angular/compiler-cli": "14.1.0-next.0",
-    "@angular/core": "14.1.0-next.0",
+    "@angular/animations": "14.1.0-rc.0",
+    "@angular/bazel": "patch:@angular/bazel@npm:14.1.0-next.2#.yarn/patches/@angular-bazel-npm.patch",
+    "@angular/cdk": "14.1.0-next.3",
+    "@angular/cli": "14.1.0-next.4",
+    "@angular/common": "14.1.0-rc.0",
+    "@angular/compiler": "14.1.0-rc.0",
+    "@angular/compiler-cli": "14.1.0-rc.0",
+    "@angular/core": "14.1.0-rc.0",
     "@angular/fire": "^7.1.0-rc",
-    "@angular/forms": "14.1.0-next.0",
-    "@angular/material": "14.1.0-next.0",
-    "@angular/platform-browser": "14.1.0-next.0",
-    "@angular/platform-browser-dynamic": "14.1.0-next.0",
-    "@angular/router": "14.1.0-next.0",
+    "@angular/forms": "14.1.0-rc.0",
+    "@angular/material": "14.1.0-next.3",
+    "@angular/platform-browser": "14.1.0-rc.0",
+    "@angular/platform-browser-dynamic": "14.1.0-rc.0",
+    "@angular/router": "14.1.0-rc.0",
     "@bazel/bazelisk": "^1.11.0",
-    "@bazel/jasmine": "5.5.0",
+    "@bazel/jasmine": "5.5.2",
     "@google-cloud/firestore": "^5.0.2",
     "@google-cloud/storage": "^6.0.0",
-    "@octokit/auth-app": "^3.6.0",
-    "@octokit/core": "^3.5.1",
-    "@octokit/graphql": "^4.8.0",
+    "@octokit/auth-app": "^4.0.0",
+    "@octokit/core": "^4.0.0",
+    "@octokit/graphql": "^5.0.0",
     "@octokit/graphql-schema": "^10.72.0",
-    "@octokit/plugin-paginate-rest": "^2.13.5",
-    "@octokit/plugin-rest-endpoint-methods": "^5.3.3",
-    "@octokit/request-error": "^2.1.0",
-    "@octokit/rest": "^18.7.0",
+    "@octokit/plugin-paginate-rest": "^3.0.0",
+    "@octokit/plugin-rest-endpoint-methods": "^6.0.0",
+    "@octokit/request-error": "^3.0.0",
+    "@octokit/rest": "^19.0.0",
     "@octokit/types": "^6.16.6",
-    "@octokit/webhooks-types": "^5.5.1",
+    "@octokit/webhooks-types": "^6.0.0",
     "@types/babel__core": "^7.1.19",
     "@types/cli-progress": "^3.9.1",
     "@types/conventional-commits-parser": "^3.0.1",
@@ -109,21 +110,20 @@
     "cli-progress": "^3.7.0",
     "conventional-commits-parser": "^3.2.1",
     "ejs": "^3.1.6",
-    "escodegen": "^1.13.0",
-    "firebase": "9.8.2-canary.497d34c84",
-    "firebase-admin": "^10.2.0",
+    "firebase": "9.9.0",
+    "firebase-admin": "^11.0.0",
     "firebase-functions": "^3.21.2",
     "firebase-tools": "^11.0.1",
     "folder-hash": "^4.0.2",
     "font-color-contrast": "^11.1.0",
     "gcip-cloud-functions": "0.0.3",
     "git-raw-commits": "^2.0.10",
-    "glob": "7.2.0",
+    "glob": "8.0.3",
     "husky": "^8.0.0",
     "inquirer": "^8.0.0",
     "jasmine": "~4.2.0",
     "jasmine-core": "~4.2.0",
-    "jsdom": "^19.0.0",
+    "jsdom": "^20.0.0",
     "karma": "^6.3.15",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "~2.2.0",
@@ -133,14 +133,15 @@
     "karma-requirejs": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.8",
     "minimatch": "^5.0.0",
-    "multimatch": "^5.0.0",
+    "multimatch": "^6.0.0",
     "nock": "^13.0.3",
     "node-fetch": "^3.2.5",
-    "protobufjs": "^6.11.3",
+    "protobufjs": "^7.0.0",
     "requirejs": "^2.3.6",
     "rxjs": "^7.4.0",
     "semver": "^7.3.5",
-    "supports-color": "8.1.1",
+    "supports-color": "9.2.2",
+    "terser": "^5.14.1",
     "ts-node": "^10.8.1",
     "tslint": "^6.1.3",
     "typed-graphqlify": "^3.1.1",
@@ -149,8 +150,12 @@
     "yaml": "^2.0.0",
     "zone.js": "^0.11.4"
   },
+  "dependenciesMeta": {
+    "re2": {
+      "built": false
+    }
+  },
   "resolutions": {
-    "@angular/benchpress/@angular/core": "14.1.0-next.0",
-    "@angular/bazel@14.1.0-next.0": "patch:@angular/bazel@npm:14.1.0-next.0#.yarn/patches/@angular-bazel-npm-14.1.0-next.0-9dd2cc71f8.patch"
+    "@angular/benchpress/@angular/core": "14.1.0-rc.0"
   }
 }
